crates/biome_module_graph/tests/snapshots/test_infer_module_types_evaluates_typeof_operator_on_build.snap
---
source: crates/biome_module_graph/tests/spec_tests.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
export const value = 1;
export function readValue(): string {
	return "value";
}

export class Service {}

export const valueType = typeof value;
export const functionType = typeof readValue;
export const classType = typeof Service;
export const unknownType = typeof notDeclared;
```

## Inferred types

```
Binding value "value" => number: 1

Expression "1" => number: 1

Binding readValue "readValue" => sync Function "readValue" {
  accepts: {
    params: []
    type_args: []
  }
  returns: string
}

Expression "\"value\"" => string: value

Binding Service "Service" => class "Service" {
  extends: none
  implements: []
  type_args: []
}

Binding valueType "valueType" => string: number

Expression "typeof value" => string: number

Expression "value" => number: 1

Binding functionType "functionType" => string: function

Expression "typeof readValue" => string: function

Expression "readValue" => sync Function "readValue" {
  accepts: {
    params: []
    type_args: []
  }
  returns: string
}

Binding classType "classType" => string: function

Expression "typeof Service" => string: function

Expression "Service" => class "Service" {
  extends: none
  implements: []
  type_args: []
}

Binding unknownType "unknownType" => string: bigint | string: boolean | string: function | string: number | string: object | string: string | string: symbol | string: undefined

Expression "typeof notDeclared" => string: bigint | string: boolean | string: function | string: number | string: object | string: string | string: symbol | string: undefined

Expression "notDeclared" => unknown
```
