crates/biome_module_graph/tests/snapshots/test_infer_module_types_filters_conditional_subsets_on_build.snap
---
source: crates/biome_module_graph/tests/spec_tests_v2.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
export let maybeText: string | null = "value";
export let zeroOrText: string | 0 = "value";
export class Box {}
export let maybeBox: Box | null = new Box();

export const nullishResult = maybeText ?? "fallback";
export const andResult = zeroOrText && true;
export const nullishBox = maybeBox ?? "fallback";
```

## Inferred types

```
Binding maybeText "maybeText" => string | null

Expression "\"value\"" => string: value

Binding zeroOrText "zeroOrText" => string | number: 0

Expression "\"value\"" => string: value

Binding Box "Box" => class "Box" {
  extends: none
  implements: []
  type_args: []
}

Binding maybeBox "maybeBox" => instanceof Box | null

Expression "new Box()" => instanceof Box

Expression "Box" => class "Box" {
  extends: none
  implements: []
  type_args: []
}

Binding nullishResult "nullishResult" => string

Expression "maybeText" => string | null

Expression "maybeText ?? \"fallback\"" => string

Expression "\"fallback\"" => string: fallback

Binding andResult "andResult" => string:  | number: 0 | bool: true

Expression "zeroOrText" => string | number: 0

Expression "zeroOrText && true" => string:  | number: 0 | bool: true

Expression "true" => bool: true

Binding nullishBox "nullishBox" => instanceof Box | string: fallback

Expression "maybeBox" => instanceof Box | null

Expression "maybeBox ?? \"fallback\"" => instanceof Box | string: fallback

Expression "\"fallback\"" => string: fallback
```
