crates/biome_module_graph/tests/snapshots/test_infer_module_types_keeps_overloads_viable_for_partially_modelled_arguments_on_build.snap
---
source: crates/biome_module_graph/tests/spec_tests_v2.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
interface Options {
	initial?: string;
}
interface DefinedOptions extends Options {
	initial: string;
}

declare function query(options: DefinedOptions): number;
declare function query(options: Options): string;

declare const defaults: DefinedOptions;
declare function tag<T>(value: T): T & { tagged: true };

export const fromSpread = query({ ...defaults });
export const fromEmpty = query({});
export const fromIntersection = query(tag({ ...defaults }));
```

## Inferred types

```
Binding Options "Options" => interface "Options" {
  extends: []
  type_args: []
  members: ["initial"?: string | undefined]
}

Binding DefinedOptions "DefinedOptions" => interface "DefinedOptions" {
  extends: [instanceof Options]
  type_args: []
  members: ["initial": string]
}

Binding query "query" => sync Function "query" {
  accepts: {
    params: [
      required options: instanceof DefinedOptions
    ]
    type_args: []
  }
  returns: number
}

Binding options "options" => instanceof DefinedOptions

Binding query "query" => Object {
  prototype: No prototype
  members: [
    ():
      sync Function "query" {
        accepts: {
          params: [
            required options: instanceof DefinedOptions
          ]
          type_args: []
        }
        returns: number
      }
    ,
    ():
      sync Function "query" {
        accepts: {
          params: [
            required options: instanceof Options
          ]
          type_args: []
        }
        returns: string
      }
  ]
}

Binding options "options" => instanceof Options

Binding defaults "defaults" => instanceof DefinedOptions

Binding tag "tag" => sync Function "tag" {
  accepts: {
    params: [
      required value: instanceof T
    ]
    type_args: [T]
  }
  returns: instanceof T
  & Object {
    prototype: No prototype
    members: ["tagged": bool: true]
  }
}

Binding T "T" => T

Binding value "value" => instanceof T

Binding fromSpread "fromSpread" => number

Expression "query" => Object {
  prototype: No prototype
  members: [
    ():
      sync Function "query" {
        accepts: {
          params: [
            required options: instanceof DefinedOptions
          ]
          type_args: []
        }
        returns: number
      }
    ,
    ():
      sync Function "query" {
        accepts: {
          params: [
            required options: instanceof Options
          ]
          type_args: []
        }
        returns: string
      }
  ]
}

Expression "query({ ...defaults })" => number

Expression "{ ...defaults }" => Object {
  unknown members
  prototype: No prototype
  members: []
}

Expression "defaults" => instanceof DefinedOptions

Binding fromEmpty "fromEmpty" => string

Expression "query" => Object {
  prototype: No prototype
  members: [
    ():
      sync Function "query" {
        accepts: {
          params: [
            required options: instanceof DefinedOptions
          ]
          type_args: []
        }
        returns: number
      }
    ,
    ():
      sync Function "query" {
        accepts: {
          params: [
            required options: instanceof Options
          ]
          type_args: []
        }
        returns: string
      }
  ]
}

Expression "query({})" => string

Expression "{}" => Object {
  prototype: No prototype
  members: []
}

Binding fromIntersection "fromIntersection" => number

Expression "query" => Object {
  prototype: No prototype
  members: [
    ():
      sync Function "query" {
        accepts: {
          params: [
            required options: instanceof DefinedOptions
          ]
          type_args: []
        }
        returns: number
      }
    ,
    ():
      sync Function "query" {
        accepts: {
          params: [
            required options: instanceof Options
          ]
          type_args: []
        }
        returns: string
      }
  ]
}

Expression "query(tag({ ...defaults }))" => number

Expression "tag" => sync Function "tag" {
  accepts: {
    params: [
      required value: instanceof T
    ]
    type_args: [T]
  }
  returns: instanceof T
  & Object {
    prototype: No prototype
    members: ["tagged": bool: true]
  }
}

Expression "tag({ ...defaults })" => Object {
  unknown members
  prototype: No prototype
  members: ["tagged": bool: true]
}

Expression "{ ...defaults }" => Object {
  unknown members
  prototype: No prototype
  members: []
}

Expression "defaults" => instanceof DefinedOptions
```
