crates/biome_module_graph/tests/snapshots/test_infer_module_types_merges_class_instance_intersections_on_build.snap
---
source: crates/biome_module_graph/tests/spec_tests.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
export function readPromiseObject(
	value: Promise<string> & { value: number },
): Promise<string> & { value: number } {
	return value;
}
```

## Inferred types

```
Binding readPromiseObject "readPromiseObject" => sync Function "readPromiseObject" {
  accepts: {
    params: [
      required value: instanceof Promise<string>
      & Object {
        prototype: No prototype
        members: ["value": number]
      }
    ]
    type_args: []
  }
  returns: instanceof Promise<string>
  & Object {
    prototype: No prototype
    members: ["value": number]
  }
}

Binding value "value" =>
  instanceof Promise<string>
  & Object {
    prototype: No prototype
    members: ["value": number]
  }

Expression "value" =>
  instanceof Promise<string>
  & Object {
    prototype: No prototype
    members: ["value": number]
  }
```
