crates/biome_module_graph/tests/snapshots/test_infer_module_types_merges_inline_object_intersections_on_build.snap
---
source: crates/biome_module_graph/tests/spec_tests.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
export function readCombined(
	value: { name: string } & { value: number },
): { name: string } & { value: number } {
	return value;
}

export function readValue(
	value: { value: string } & { value: number },
): { value: string } & { value: number } {
	return value;
}
```

## Inferred types

```
Binding readCombined "readCombined" => sync Function "readCombined" {
  accepts: {
    params: [
      required value: Object {
        prototype: No prototype
        members: ["name": string, "value": number]
      }
    ]
    type_args: []
  }
  returns: Object {
    prototype: No prototype
    members: ["name": string, "value": number]
  }
}

Binding value "value" => Object {
  prototype: No prototype
  members: ["name": string, "value": number]
}

Expression "value" => Object {
  prototype: No prototype
  members: ["name": string, "value": number]
}

Binding readValue "readValue" => sync Function "readValue" {
  accepts: {
    params: [
      required value: Object {
        prototype: No prototype
        members: ["value": string | number]
      }
    ]
    type_args: []
  }
  returns: Object {
    prototype: No prototype
    members: ["value": string | number]
  }
}

Binding value "value" => Object {
  prototype: No prototype
  members: ["value": string | number]
}

Expression "value" => Object {
  prototype: No prototype
  members: ["value": string | number]
}
```
